Alignment and layout issues fixes due to frameset Replacement.

--- a/interface/themes/bootstrap/sass/style_bootstrap.scss
+++ b/interface/themes/bootstrap/sass/style_bootstrap.scss
@@ -29,6 +29,7 @@ $btn-lg-curve: 5px;
 $btn-sm-curve: 3px;
 
 body {
+   
   margin: 0px 0px 0px 0px;
   /* set the base font and size for all DOM children */
   font-family: sans-serif;
@@ -208,7 +209,7 @@ $body-color: #fff;
 .body_top { background-color: $body-color; margin: 8px }    /* $top_bg_line */
 .bgcolor2 { background-color: #fefdcf; }    /* $GLOBALS['style']['BGCOLOR2'] */
 .body_bottom { background: url('../pic/aquabg.gif') repeat; margin: 8px }  /* $bottom_bg_line */
-.body_title { background-color: $silverColor; overflow: hidden;}  /* $title_bg_line */
+.body_title { background-color: $silverColor; overflow: hidden; padding: 0 !important;}  /* $title_bg_line */
 .body_nav { background-color: $silverColor; }    /* $nav_bg_line */
 .body_filler { background-color: #f7f0d5; } /* $login_filler_line */
 .body_login { background: url('../pic/aquabg.gif') repeat; } /* $login_body_line */
